--- a/webpages/effect.html
+++ b/webpages/effect.html
@@ -19,7 +19,7 @@
 
 
 <div class="page">
-<div class="banner"><img src="images/banner.jpg" width="957" height="148" /></div>
+<div class="banner"><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\banner.jpg" width="957" height="148" /></div>
 
 <div class="daohang"><p><a href="index.html">首页</a></p>
 <p><a href="social.html">社会原因</a></p>
@@ -35,7 +35,7 @@
   <p> 被害人文某某（女，殁年31岁）于2014年3月与谢某宇登记结婚。 <br />
   婚后谢某宇常年沉迷赌博，双方家庭通过变卖房产等方式为其偿还巨额赌债。谢某宇还多次无故殴打、辱骂文某某，甚至持剪刀捅扎文某某，致文某某多次受伤。 <br />
   2021年7月7日，文某某向法院提起离婚诉讼，谢某宇收到法院开庭传票后再度扬言杀害文某某。同月10日时许，谢某宇携刀再次蹲守，持刀捅刺文某某数下，致文某某当场死亡。 </p>
-  <p><img src="images/divorce.jpg" width="175" height="130" alt=""/></p>
+  <p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\divorce.jpg" width="175" height="130" alt=""/></p>
   </div>
        
 </div>
@@ -50,7 +50,7 @@
     然而，当出轨、家庭暴力等其他婚姻情况出现时，而离婚受到了限制无法迅速得到解决，他们就只能通过司法程序来解决。 <br />
     在以下数据中我们可以看到，诉讼离婚的数量是在增加的。当协议离婚不适用时，受害者更倾向于通过诉讼离婚来获得法律的保护和救济。</p>
 	<div id="container"></div>
-    <p ><img src="images/data17.png" width="597" height="262" alt=""/></p>
+    <p ><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\data17.png" width="597" height="262" alt=""/></p>
   </li>
   <li></li>
   <li>
@@ -65,7 +65,7 @@
   <li><strong>3.关于离婚冷静期，我们在焦虑什么</strong></li>
 </ul>
 <p >这些事件或许都告诉我们，关于离婚冷静期，女性在焦虑着...</p>
-<p ><img src="images/data14.png" width="597" height="262" alt=""/></p>
+<p ><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\data14.png" width="597" height="262" alt=""/></p>
 <p ><strong>家庭暴力风险加剧</strong><strong> </strong><br />
 离婚冷静期的存在，对于那些长期遭受家庭暴力的受害者来说，极大增加了她们的风险。正如一些真实案例中，女性在提出离婚后，冷静期内反而成为家庭暴力的高发阶段。施暴者知道对方短期内无法逃离，容易产生更大的情绪失控和暴力行为，使得受害者陷入更危险的境地。 <br />
 <strong>婚育观念冲突</strong><strong> </strong><br />
