--- a/webpages/index.html
+++ b/webpages/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="page">
-<div class="banner"><img src="images/banner.jpg" width="957" height="148" /></div>
+<div class="banner"><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\banner.jpg" width="957" height="148" /></div>
 
 <div class="daohang"><p><a href="index.html">首页</a></p>
 <p><a href="social.html">社会原因</a></p>
@@ -22,7 +22,7 @@
   <div class="fangshi">
     <h1>时间溯源</h1>
   <p>追溯到2021年1月1日，我国宣布实施离婚冷静期，是对婚姻问题的进一步探索。离婚冷静期的出现，本意是给冲动离婚的夫妻一个&ldquo;慢动作回放的机会&rdquo;，让他们重新审视婚姻，避免一时冲动造成不可挽回的后果。 </p>
-  <p><img src="images/divorce.jpg" width="175" height="130" alt=""/><br />
+  <p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\divorce.jpg" width="175" height="130" alt=""/><br />
   </p>
   </div>
        
@@ -45,13 +45,13 @@
 <h1>离婚冷静期设置的必要性
 </h1>
 <p >设置离婚冷静期，是民法典的一项重要规定，是根据我国婚姻家庭领域出现的新形势心情款那个作出的一项重大制度安排，其目的是减少离婚或者草率离婚。 数据统计显示，近20年间，我国的离婚率在不断攀升，而结婚率却不断降低，各省的复婚率也居高不下。 </p>
-<p ><img src="images/data2.png" width="297" height="152" alt=""/><img src="images/data16.png" width="297" height="152" alt=""/><br />
+<p ><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\data2.png" width="297" height="152" alt=""/><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\data16.png" width="297" height="152" alt=""/><br />
   众所周知，婚姻的未定影响着社会的和谐与发展，于是，离婚冷静期应运而生。</p>
 </div>
 
 <div class="jieshaoB">
   <h1>网友的看法火药味十足</h1>
-  <p><img src="images/data10.png" width="597" height="262" alt=""/></p>
+  <p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\data10.png" width="597" height="262" alt=""/></p>
   <blockquote>
     <blockquote>
  <p>设置离婚冷静期，是民法典的一项重要规定，是根据我国婚姻家庭领域出现的新形势心情款那个作出的一项重大制度安排，其目的是减少 离婚或者草率离婚。 数据统计显示，近20年间，我国的离婚率在不断攀升，而结婚率却不断降低，各省的复婚率也居高不下。 众所周知，婚姻的未定影响着社会的和谐与发展，于是，离婚冷静期应运而生。</p>
@@ -66,7 +66,7 @@
     <blockquote>
  <p>离婚冷静期从社会的稳定和整体的利益出发，兼顾保障个人权利和自由。
 离婚冷静期出台后，在国内引起了强烈的反响，自2021年1月1日开始实施离婚冷静期规定，时间为30天，21年离婚对数减少了20万，效果可谓立竿见影。</p>
- <p><img src="images/data1.png" width="597" height="262" alt=""/></p>
+ <p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\data1.png" width="597" height="262" alt=""/></p>
  
     </blockquote>
   </blockquote>
