--- a/webpages/social.html
+++ b/webpages/social.html
@@ -10,7 +10,7 @@
 
 
 <div class="page">
-<div class="banner"><img src="images/banner.jpg" width="957" height="148" /></div>
+<div class="banner"><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\banner.jpg" width="957" height="148" /></div>
 
 <div class="daohang"><p><a href="index.html">首页</a></p>
 <p><a href="social.html">社会原因</a></p>
@@ -24,7 +24,7 @@
   <div class="fangshi">
     <h1>离婚率的变化</h1>
   <p>然而，离婚率的变化意味着婚姻问题的解决吗？带来婚姻现状的深层原因会因此而改变吗？婚姻带来的负面问题会因此而解决吗？</p>
-  <p><img src="images/divorce.jpg" width="175" height="130" alt=""/>
+  <p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\divorce.jpg" width="175" height="130" alt=""/>
   </p>
   </div>
        
@@ -38,10 +38,10 @@
 <p>结婚数量的减少伴随着人际交往模式的变化，经济的不稳定以及陪伴对象多元化等多方面的原因。 </p>
 <p><strong>如今，口水淹不死不结婚的人了。</strong> 商业和城市的出现，改变了传统社会以家庭和村落为基础的居住结构。市场经济的繁荣让商业不再局限在几个熟人之间，而是需要大规模与陌生人交往。
 现代城市又进一步使得人们原有的血源性和地缘性被打破，城市人际交往的情感性正在逐渐减弱，人际交往模式更加倾向于工具性。</p>
-<p><img src="images/data15.png" width="597" height="262" alt=""/><br />
+<p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\data15.png" width="597" height="262" alt=""/><br />
 <strong>经济的不稳定也让婚姻的坚守更加不易。</strong><strong> </strong><br />
 如今，夫妻二人都在企业工作，甚至都在同一行业。双方在受同一共振影响，大面积失业情况发生时，两者可能同时失业。夫妻双方也在同一工作成本象限内，雨雪天气两人都困在交通拥堵中。房子，又是一个几乎难以实现的共同目标。</p>
-<p><img src="images/data11.png" width="597" height="262" alt=""/></p>
+<p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\data11.png" width="597" height="262" alt=""/></p>
 <p><strong>如今，万物皆可做搭子，我们可以找到更多元的陪伴对象</strong><strong> </strong><br/>
 陪伴的对象正在变得更多元，2021年中国58.4%的单身人群有养宠物，猫猫狗狗、鱼鱼鸟鸟的陪伴宠物不仅为人们带来生活的乐趣，更能够成为情感上的寄托。无论是身边的爱宠，还是云吸猫狗，宠物带来的陪伴是实在的——无言却治愈。 <br />
   <br />
@@ -50,7 +50,7 @@
   <li><strong>2.探究婚姻现状背后的社会原因——离婚原因的多样性 </strong></li>
 </ol>
 <p >&nbsp;一直以来，导致婚姻破裂的原因都是具有多样性的。 </p>
-<p><img src="images/data12.png" width="597" height="262" alt=""/><br />
+<p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\data12.png" width="597" height="262" alt=""/><br />
 离婚冷静期通过调整或增设时间门槛，增加了诉讼离婚或协议离婚的时间成本，的确对于婚姻稳定有着一定的积极作用。 <br />
 </p>
 </div>
