--- a/webpages/solution.html
+++ b/webpages/solution.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="page">
-<div class="banner"><img src="images/banner.jpg" width="957" height="148" /></div>
+<div class="banner"><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\banner.jpg" width="957" height="148" /></div>
 
 <div class="daohang"><p><a href="index.html">首页</a></p>
 <p><a href="social.html">社会原因</a></p>
@@ -24,12 +24,12 @@
   <div class="fangshi">
     <h1>观点调查</h1>
   <p> 2019年末，人民日报在微博上发起了关于&rdquo;是否支持离婚冷静期&ldquo;的调查，在21万参与投票的网友中，超半数表示不支持。</p>
-  <p><img src="images/vote2.jpg" width="175" height="130" alt=""/></p>
+  <p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\vote2.jpg" width="175" height="130" alt=""/></p>
   <p>同时，我们收集了微博平台上获百人，千余人点赞的有关&ldquo;离婚冷静期&rdquo;的典型观点 ：<br />
   离婚冷静期可能牺牲女性权益，加重婚姻不平等。“有人认为离婚冷静期政策更多.<br />
   离婚冷静期并未触及婚姻问题的根本。“有观点认为，离婚冷静期并不能从根本上…<br />
   离婚冷静期应具备灵活性，适应不同情况。“有人认为离婚冷静期应更具灵活性…</p>
-  <p><img src="images/vote3.jpg" width="175" height="130" alt=""/>
+  <p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\vote3.jpg" width="175" height="130" alt=""/>
   </p>
 </div>
        
@@ -47,7 +47,7 @@
 <p><strong>2.公众观点 </strong><br />
   面对婚姻问题我们需要和大众一起进行更加深入的探讨。 <br />
   观察者网在2024年8月份发布投票，收集网民的观点：你是如何看离婚冷静期的？1.1万余人次参与，数据如下： </p>
-<p><img src="images/vote1.jpg" width="597" height="319" alt=""/></p>
+<p><img src="D:\课程\课程论文\数据新闻理论与实践\数据新闻\数据新闻\webpages\images\vote1.jpg" width="597" height="319" alt=""/></p>
 <p>&nbsp;</p>
 <p><strong>3.改进意见 </strong><br />
 <strong>因此，我们认为：</strong><strong> </strong><br />
