--- a/webpages/solution.html
+++ b/webpages/solution.html
@@ -6,7 +6,152 @@
 <link rel="stylesheet" type="text/css" href="css/index.css" />
 <script src="Scripts/AC_RunActiveContent.js" type="text/javascript"></script>
 </head>
-
+@charset "utf-8";
+/* CSS Document */
+body, ul, ol, li, p, h1, h2, h3, h4, h5, h6, form, fieldset, table, td, img, div {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+body {
+    font-family: "Roboto", Arial, sans-serif; /* 现代无衬线字体 */
+    font-size: 14px;
+    color: #333333; /* 深灰文字 */
+    line-height: 1.6;
+    text-align: left;
+    background-color: #f5f7fa; /* 浅蓝灰背景 */
+}
+a {
+    color: #0056b3; /* 深蓝色链接 */
+}
+a:link, a:visited {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+    color: #ff8c42; /* 橙色强调 */
+}
+ul, li {
+    list-style-type: none;
+}
+.clearit {
+    clear: both;
+}
+.page {
+    width: 1000px;
+    margin: 20px auto;
+    background-color: #ffffff; /* 白色内容区域 */
+    border: 1px solid #e3e7ed; /* 浅灰边框 */
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 添加轻微阴影 */
+    padding: 20px;
+}
+.daohang {
+    width: 100%;
+    height: 50px;
+    background-color: #0056b3; /* 深蓝背景 */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+.daohang p {
+    font-size: 16px;
+    font-weight: bold;
+    color: #ffffff;
+}
+.daohang p a {
+    color: #ffffff;
+}
+.content {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 20px;
+}
+.zuo {
+    width: 250px;
+    background-color: #e3f2fd; /* 淡蓝背景 */
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.fangshi {
+    margin-top: 15px;
+    background-color: #ffffff; /* 白色背景 */
+    border-radius: 8px;
+    padding: 10px;
+    border: 1px solid #dee2e6; /* 浅灰边框 */
+}
+.fangshi h1 {
+    font-size: 18px;
+    font-weight: bold;
+    color: #0056b3; /* 深蓝标题 */
+    margin-bottom: 10px;
+}
+.fangshi p {
+    font-size: 14px;
+    color: #333333; /* 深灰文字 */
+    line-height: 1.8;
+}
+.you {
+    flex-grow: 1;
+    background-color: #ffffff; /* 白色背景 */
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.jieshao {
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: #e3f2fd; /* 淡蓝背景 */
+    border-radius: 8px;
+}
+.jieshao h1 {
+    font-size: 18px;
+    font-weight: bold;
+    color: #0056b3; /* 深蓝标题 */
+    margin-bottom: 10px;
+}
+.jieshao p {
+    font-size: 14px;
+    color: #333333; /* 深灰文字 */
+}
+.jieshaoB {
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: #e3f2fd; /* 淡蓝背景 */
+    border-radius: 8px;
+}
+.jieshaoB h1 {
+    font-size: 18px;
+    font-weight: bold;
+    color: #0056b3; /* 深蓝标题 */
+    margin-bottom: 10px;
+}
+.jieshaoB p {
+    font-size: 14px;
+    color: #333333; /* 深灰文字 */
+}
+.foot {
+    text-align: center;
+    margin-top: 40px;
+    padding: 20px;
+    background-color: #0056b3; /* 深蓝背景 */
+    color: #ffffff; /* 白色文字 */
+    border-radius: 8px;
+}
+.foot p {
+    font-size: 14px;
+    line-height: 1.6;
+}
 <body>
 
 <div class="page">
